--- a/style-expanded.css
+++ b/style-expanded.css
@@ -2256,7 +2256,8 @@ ul.manage-weekdays .day:hover {
 }
 
 .daily-glance.personal,
-.daily-glance.personal-odin {
+.daily-glance.personal-odin,
+.daily-glance.personal-admin {
   border-left: 1px solid #96ff00;
 }
 
@@ -2361,6 +2362,22 @@ a.manage-edit {
 }
 a.manage-edit:hover {
   color: #96ff00;
+}
+
+a.manage-edit.off-limits {
+  color: #757575;
+  transition: all 0.2s ease;
+  margin-left: 1em;
+  text-decoration: none;
+  cursor: default;
+}
+
+a.manage-edit.my-stuff {
+  color: #757575;
+  transition: all 0.2s ease;
+  margin-left: 1em;
+  text-decoration: none;
+  cursor: default;
 }
 
 a.manage-edit.inline {
@@ -3435,7 +3452,7 @@ span.sending-msg {
 #transfer-host {
   width: 100%;
   max-width: 600px;
-  padding: 1em;
+  padding: 0.25em 1em 1em;
   background-color: rgba(0, 0, 0, 0.5);
 }
 #transfer-host p.t-nav {
@@ -3464,14 +3481,17 @@ span.sending-msg {
 #transfer-host p {
   margin: 0.25em 0 1.5em;
 }
+#transfer-host p.current-role {
+  margin: 0.25em 0 0;
+}
 #transfer-host p.bob-1 {
   margin: 0.25 0 0.75em 0;
   padding: 0.25em 0em 0.5em;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 #transfer-host p.th-un {
-  margin: 0.25em 0 0;
-  padding-top: 0.25em;
+  margin: 0;
+  padding-top: 0em;
 }
 #transfer-host p.th-em {
   margin: 0 0 0.75em 0;
@@ -3489,8 +3509,7 @@ span.sending-msg {
 }
 #transfer-host form input {
   width: 100%;
-  height: 1.5em;
-  padding: 0.25em;
+  padding: 0.5em;
   border: none;
   outline: none;
   border-radius: none;
@@ -3555,6 +3574,33 @@ span.sending-msg {
 #transfer-host a#select-role-first,
 #transfer-host a#not-yourself {
   cursor: not-allowed;
+}
+
+h2.demote,
+h2.change-role,
+h2.trans-h2 {
+  width: 100%;
+  max-width: 600px;
+  font-size: 1.75em;
+  background-color: #841616;
+  padding: 0.5em;
+  border-bottom: none;
+}
+
+h2.trans-h2 {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+h2.change-role {
+  background-color: #376420;
+}
+
+h2.change-role.downgrade {
+  background-color: #841616;
+}
+
+h2.change-role.upgrade {
+  background-color: #376420;
 }
 
 @media screen and (max-width: 440px) {
