--- a/components/sass/email-host-modal.scss
+++ b/components/sass/email-host-modal.scss
@@ -6,7 +6,7 @@ body.noscrollz {
 #theModal {
   display: none; /* turn this modal on or off for dev at btm of script */
   position: fixed;
-  z-index: 1234562;
+  z-index: 84;
   left: 0;
   top: 0;
   width: 100%;
