--- a/components/sass/_lat-long.scss
+++ b/components/sass/_lat-long.scss
@@ -23,7 +23,7 @@ a#gmaps {
   height: 100%;
   min-height: 100vh;
   background-color: rgba(255, 255, 255, 0.6);
-  z-index: 1234567;
+  z-index: 82;
 
   position: fixed;
   top: 0px;
