--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -1,107 +1,181 @@
-nav {
-position: fixed;
-top: 0;
-right: 0;
-left: 0;
-width: 100%;
-display: flex;
-justify-content: center;
-margin-top: -1em;
-z-index: 1234580;
-& > ul {
-width: 96%;
-max-width: 1050px;
-li {
-display: inline-block;
-width: 98px;
-& > a {
-position: absolute;
-padding: 8px 0px 8px 0px;
-width: 100px;
-cursor: pointer;
-text-align: center;
-background-color: rgba(0,0,0,1);
-color: #fff;
-border-top: none;
-border-right: 1px solid rgba(255,255,255,0.6);
-border-bottom-right-radius: 3px;
-border-bottom: 1px solid rgba(255,255,255,0.6);
-border-bottom-left-radius: 3px;
-border-left: 1px solid rgba(255,255,255,0.6);
-transition: all 0.1s ease;
-&:hover {
-	background-color: rgba(0,0,0,0.5);
-	padding: 12px 0px 8px 0px;
-	}
-}
-& > a.why-join {
-background-color: rgba(42,181,51,1);
-&:hover {
-background-color: rgba(42,181,51,0.5);
-	}
-}
-& > a.login {
-background-color: rgba(212,232,218,1);
-&:hover {
-background-color: rgba(212,232,218,0.3);
-				}
-			}
+#navigation {
+	top: 0;
+	// left: 0;
+	text-align: right;
+	width: 96%;
+	max-width: 900px;
+	margin: 0 auto;
+	z-index: 78;
+	span.top-nav {
+		position: fixed;
+		cursor: pointer;
+		background-color: rgba(0,0,0,1);
+		color: #fff;
+		padding: 0.5em 1em 0.5em 1em;
+		// margin-top: -0.25em;
+		border-top: none;
+		border-right: 1px solid rgba(255,255,255,0.6);
+		border-bottom-right-radius: 3px;
+		border-bottom: 1px solid rgba(255,255,255,0.6);
+		border-bottom-left-radius: 3px;
+		border-left: 1px solid rgba(255,255,255,0.6);
+		transition: all 0.2s ease;
+		&:hover {
+			padding-top: 0.75em;
+			background-color: #313131;
+			color: #fff;
 		}
 	}
-}
-@media screen and (max-width: 800px) {
-nav {
-position: fixed;
-top: inherit;
-bottom: 0;
-left: inherit;
-right: inherit;
-margin-top: 0;
-height: 1px;
-& > ul {
-display: flex;
-justify-content: center;
-li:nth-child(1) {
-// margin-right: 1em;
-}
-li {
-display: inline-block;
-width: 5em;
-// height: 3em;
-margin: 0 5px;
-& > a {
-position: absolute;
-padding: 0.65em;
-margin-top: -2.5em;
-width: 5em;
-cursor: pointer;
-text-align: center;
-background-color: rgba(0,0,0,1);
-color: #fff;
-border-top: 1px solid #fff;
-border-top-right-radius: 3px;
-border-right: 1px solid #fff;
-border-bottom-right-radius: 3px;
-border-bottom: 1px solid #fff;
-border-bottom-left-radius: 3px;
-border-left: 1px solid #fff;
-border-top-left-radius: 3px;
-// border-radius: 3px;
-// border: 1px solid #fff;
-transition: all 0.2s ease;
-outline: none;
-&:hover {
-	background-color: rgba(0,0,0,1);
-	padding: 0.65em;
+	span.top-nav.admin-logged {
+		background-color: gold;
+		color: #000;
+		border-right: 1px solid rgba(255,246,0,1);
+		border-bottom: 1px solid rgba(255,246,0,1);
+		border-left: 1px solid rgba(255,246,0,1);		
 	}
-}
-& > a.why-join {
-background-color: rgba(42,181,51,1);
-&:hover {
-	background-color: rgba(42,181,51,1);
-					}
-				}
-			}
+}	
+.sidenav {
+	display: flex;
+	flex-direction: column;
+  height: 100%;
+  width: 0; /* 0 width - change with JS */
+
+  // for testing
+  // width: 300px;
+
+  position: fixed; 
+  z-index: 80;
+  top: 0;
+  right: 0;
+  background-color: #111;
+  background-color: rgba(0,0,0,0.9);
+
+  // this puts a 1px border down the side of the entire page.
+  // border-right: 1px solid #fff;
+  overflow-x: hidden; 
+  // padding-top: 2em; 
+  transition: 0.5s; /* slide in the sidenav */
+  white-space: nowrap;
+	#sidenav-wrapper {
+		// position: absolute;
+		// top: 2em;
+		// right: 0px;
+		padding-top: 2em;
+		width: 300px; // match JS width
+		i {
+			margin-right: 0.5em;
 		}
+	}
+	a { 
+		width: 100%;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		padding: 1em 1em 1em 1.5em;
+		background-color: transparent;
+	  text-decoration: none;
+	  color: #818181;
+	  transition: all 0.2s ease;
+	  &:hover {
+	   	color: #f1f1f1;
+	   	background-color: rgba(255,255,255,0.5);
+	   	color: #fff;
+	  }
+	}
+  a.closebtn {
+  	width: 100%;
+  	padding-left: 0.75em;
+  	margin-bottom: 0.75em;
+  	display: flex;
+  	justify-content: flex-start;
+	  cursor: pointer;
+	  text-align: left;
+	  i {
+	  	font-size: 1.5em;
+	  	transform: rotate(270deg);
+	  	animation: in .25s 2 linear;
+	  	&:hover {
+	  		animation: out .5s 1 linear;
+	  	}
+	  }
 	}	
+	a.admin-login {
+		color: gold;
+	}
+	a.admin-logout {
+		color: #c30808; 
+	}
+	a.login {
+		color: #96ff00;
+		&:hover {
+			background-color: #2b8719;
+			color: #fff;
+		}
+	}
+	a.logout {
+		color: #c30808;
+		margin-top: 2em;
+		&:hover {
+			background-color: #890404;
+			color: #fff;
+		}
+	}
+	a.cc-x {
+		cursor: pointer;
+		font-size: 0.75em;
+		margin-top: 2em;
+		border-top: 1px dashed rgba(255,255,255,0.2);
+	}
+}
+
+@keyframes in {
+    0%   { transform: rotate(360deg); }
+    100% { transform: rotate(0deg); }
+}
+@keyframes out {
+    from   { transform: rotate(0deg); }
+    to { transform: rotate(360deg);}
+}
+@-webkit-keyframes in {
+    0%   { -webkit-transform: rotate(360deg); }
+    100% { -webkit-transform: rotate(0deg); }
+}
+@-webkit-keyframes out {
+    from   { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg);}
+}
+@-moz-keyframes in {
+    0%   { -moz-transform: rotate(360deg); }
+    100% { -moz-transform: rotate(0deg); }
+}
+@-moz-keyframes out {
+    from   { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg);}
+}
+@-ms-keyframes in {
+    0%   { -ms-transform: rotate(360deg); }
+    100% { -ms-transform: rotate(0deg); }
+}
+@-ms-keyframes out {
+    from   { -ms-transform: rotate(0deg); }
+    to { -ms-transform: rotate(360deg);}
+} 
+
+@media screen and (max-height: 450px) {
+  .sidenav {
+  	padding-top: 15px;
+  	a {
+  		font-size: 18px;
+  	}
+  }
+}
+p.logout {
+	color: #fff;
+	a {
+		color: #fff;
+		text-decoration: none;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
 }
