--- a/components/sass/_msg-one.scss
+++ b/components/sass/_msg-one.scss
@@ -64,7 +64,14 @@ a#gmaps {
       right: 20px;
       color: #fff;
       font-size: 1.3em;
+    }
+    i.fa-peace {
+      font-size: 2em;
     } 
+    p.peace-sign {
+      width: 100%;
+      text-align: center;
+    }
     & > h1 {
       font-size: 1.3em;
       margin-bottom: 0.5em;
