--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -296,14 +296,6 @@ li.ctr-day {
 }
 
 
-
-
-
-
-
-
-
-
 .collapse-day {
 	cursor: pointer;
 	// display: flex;
@@ -315,7 +307,7 @@ li.ctr-day {
 	// width: 60px;
 	margin: 0 auto;
 	// nav z-index is 1234580
-	z-index: 1234561;
+	z-index: 78;
 }
 .collapse-btn {
 	display: inline-flex;
