--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -5,6 +5,8 @@
 	width: 96%;
 	max-width: 900px;
 	margin: 0 auto;
+	display: flex;
+	justify-content: flex-end;
 	z-index: 78;
 	span.top-nav {
 		position: fixed;
@@ -106,16 +108,28 @@
 		color: #c30808; 
 	}
 	a.login {
-		color: #96ff00;
+		i {
+			color: #96ff00;
+		}
+		color: #818181;
 		&:hover {
+			i {
+				color: #fff;
+			}
 			background-color: #2b8719;
 			color: #fff;
 		}
 	}
 	a.logout {
-		color: #c30808;
+		i {
+			color: #c30808;
+		}
+		color: #818181;
 		margin-top: 2em;
 		&:hover {
+			i {
+				color: #fff;
+			}
 			background-color: #890404;
 			color: #fff;
 		}
@@ -125,6 +139,9 @@
 		font-size: 0.75em;
 		margin-top: 2em;
 		border-top: 1px dashed rgba(255,255,255,0.2);
+	}
+	a.cc-x.eotw {
+		margin-top: 0;
 	}
 }
 
