--- a/components/sass/email-host-modal.scss
+++ b/components/sass/email-host-modal.scss
@@ -169,6 +169,10 @@ span.sending-msg {
   display: block;
   width: 100%;  
 }
+span.sending-msg.downgraded {
+  background-color: #841616;
+  color: #fff;
+}
 .alert.alert-warning {
   background-color: #ffc6c6;
   color: #c72222;
