--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -377,7 +377,8 @@ li.ctr-day {
 		flex-direction: column;
 		.details-left,
 		.details-right {
-			width: 96%;
+			width: 100%;
+			padding: 0em;
 		}
 		.details-left {
 			border-right: none;
