--- a/style-expanded.css
+++ b/style-expanded.css
@@ -268,6 +268,7 @@ html {
   color: #818181;
   background-color: rgba(255, 215, 0, 0.6);
   color: #fff;
+  cursor: default;
 }
 .sidenav a {
   width: 100%;
