--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -8,6 +8,7 @@
 	display: flex;
 	justify-content: flex-end;
 	z-index: 78;
+	position: relative;
 	span.top-nav {
 		position: fixed;
 		cursor: pointer;
