--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -99,24 +99,23 @@ li.ctr-day {
 	background-attachment: fixed;
 	border-left: 1px solid transparent;
 }
-	.day-content {
-		font-size: 18px;
-		font-weight: normal;
-		border-bottom: 2px solid #fff;
-		padding: 0.5em 1.5em 1.5em;
-		background-color: #515151;
-		background-color: rgba(81,81,81,0.7);
-		width: 100%;
-		text-align: left;
-	    display: flex;
-	    flex-direction: column;
-	    justify-content: center;
-	    align-items: center;
-	//     & > .daily-glance-wrap:first-of-type {
-	// 	margin-top: 5em;
-	// }	
+.day-content {
+	font-size: 18px;
+	font-weight: normal;
+	border-bottom: 2px solid #fff;
+	padding: 0.5em 1.5em 1.5em;
+	background-color: #515151;
+	background-color: rgba(81,81,81,0.7);
+	width: 100%;
+	text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;	
 }
-
+p.no-mtgs {
+	padding: 2em 0em 1em;
+}
 
 .daily-glance-wrap {
 	width: 100%;
@@ -441,7 +440,7 @@ a.zoom {
   color: #313131;
   border: 1px solid #757575;
   // border-radius: 3px;
-  padding: 8px 0px;
+  padding: 0.75em 1em;
   transition: all 0.2s ease;
   &:hover {
     background: #757575;
@@ -449,11 +448,15 @@ a.zoom {
     cursor: pointer;
   }
 }
+a.zoom-id.copied {
+	background-color: #86e483;
+	color: #106f0e;
+	border: 1px solid #fff;
+}
 .zoom-id {
 	background-color: #626262;
 	color: #fff;
 	text-align: left;
-	padding-left: 1em;
 	&:hover {
 		background-color: #eaeaea;
 		color: #313131;
