--- a/style-expanded.css
+++ b/style-expanded.css
@@ -565,6 +565,10 @@ li.ctr-day .day-content {
       align-items: center;
 }
 
+p.no-mtgs {
+  padding: 2em 0em 1em;
+}
+
 .daily-glance-wrap {
   width: 100%;
   max-width: 900px;
@@ -892,7 +896,7 @@ a.zoom {
   background-color: #fff;
   color: #313131;
   border: 1px solid #757575;
-  padding: 8px 0px;
+  padding: 0.75em 1em;
   transition: all 0.2s ease;
 }
 .zoom-id:hover,
@@ -902,11 +906,16 @@ a.zoom:hover {
   cursor: pointer;
 }
 
+a.zoom-id.copied {
+  background-color: #86e483;
+  color: #106f0e;
+  border: 1px solid #fff;
+}
+
 .zoom-id {
   background-color: #626262;
   color: #fff;
   text-align: left;
-  padding-left: 1em;
 }
 .zoom-id:hover {
   background-color: #eaeaea;
