--- a/components/sass/_login.scss
+++ b/components/sass/_login.scss
@@ -435,3 +435,13 @@ span.yo-email {
 		padding: 30px 20px;
 	}
 }
+
+@media screen and (max-width: 800px) {
+	#landing form input {
+		height: auto;
+	}
+	#landing form input.submit {
+		padding: 1em;
+		height: auto;
+	}
+}
