--- a/components/sass/_login.scss
+++ b/components/sass/_login.scss
@@ -419,7 +419,7 @@ span.yo-email {
 
 @media screen and (max-width: 600px) {
 	#landing {
-		height: auto;
+		// height: auto;
 		margin: 1em auto;
 		& > form {
 			padding: 30px 20px 40px;
