yeesh - had lost suspension on homepage_private
probably when I rewrote the copy to clipboard.

--- a/components/sass/host-management.scss
+++ b/components/sass/host-management.scss
@@ -184,8 +184,8 @@ h2.change-role.upgrade {
 	}
 	p.sus-header {
 		margin: 1em 0 0;
-		background-color: rgba(0,0,0,0.9);
-		color: #757575;
+		background-color: #841616;
+		color: #fff;
 		padding: 0.5em 0.5em 0.5em 1em;
 	}
 	p.sus-notes {
