--- a/style-expanded.css
+++ b/style-expanded.css
@@ -3827,8 +3827,8 @@ h2.change-role.upgrade {
 }
 #sus-wrap p.sus-header {
   margin: 1em 0 0;
-  background-color: rgba(0, 0, 0, 0.9);
-  color: #757575;
+  background-color: #841616;
+  color: #fff;
   padding: 0.5em 0.5em 0.5em 1em;
 }
 #sus-wrap p.sus-notes {
