--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -78,6 +78,23 @@
 		color: #fff;
 		cursor: default;
 	}
+	.visitor-role,
+	.member-role {
+		padding: 1em 0em 1em 1.5em;
+		font-size: 0.8em;
+		color: #818181;
+		background-color: #101b2c;
+		color: #8d8d8d;
+		cursor: default;
+	}
+	.sus-user {
+		padding: 1em 0em 1em 1.5em;
+		font-size: 0.8em;
+		color: #818181;
+		background-color: #841616;
+		color: #8d8d8d;
+		cursor: default;
+	}	
 	a { 
 		width: 100%;
 		display: flex;
