--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -119,6 +119,19 @@
   	justify-content: flex-start;
 	  cursor: pointer;
 	  text-align: left;
+	  .ctxt {
+	  	color: transparent;
+	  	transition: color 0.2s ease-out;
+	  }
+	  &:hover {
+	  	.ctxt {
+	  		color: rgba(0,0,0,0.9);
+	  		transition: color 0.2s ease-in;
+	  	}
+	  	 .ctd {
+		  	transition-delay: 1s;
+		  }	
+	  }
 	  i {
 	  	font-size: 1.5em;
 	  	transform: rotate(270deg);
@@ -127,6 +140,13 @@
 	  		animation: out .5s 1 linear;
 	  	}
 	  }
+	  // .ctxt {
+	  // 	color: transparent;
+	  // 	transform: color 1s ease;
+	  // 	&:hover {
+	  // 		color: #fff;
+	  // 	}
+	  // }
 	}	
 	a.admin-login {
 		color: gold;
