--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -9,7 +9,7 @@
 	justify-content: flex-end;
 	z-index: 78;
 	position: relative;
-	span.top-nav {
+	.top-nav {
 		position: fixed;
 		cursor: pointer;
 		background-color: rgba(0,0,0,1);
@@ -29,14 +29,67 @@
 			color: #fff;
 		}
 	}
-	span.top-nav.admin-logged {
+	.top-nav.admin-logged {
 		background-color: gold;
 		color: #000;
 		border-right: 1px solid rgba(255,246,0,1);
 		border-bottom: 1px solid rgba(255,246,0,1);
 		border-left: 1px solid rgba(255,246,0,1);		
 	}
-}	
+}
+
+#navigation.sm-g .top-nav {
+	width: 6em;
+}
+.menu-basket {
+	position: relative;
+}
+.bar-box {
+	position: relative;
+}
+.top-nav .bars {
+	top: 0.42em;
+}
+
+.top-nav .bars,
+.top-nav .bars:before,
+.top-nav .bars:after {
+  cursor: pointer;
+  border-radius: 1px;
+  height: 3px;
+  width: 17px;
+  background: #fff; // for member
+  position: absolute;
+  display: block;
+  content: "";
+  transition: all 300ms ease-in-out;
+}
+.top-nav.admin-logged .bars,
+.top-nav.admin-logged .bars:before,
+.top-nav.admin-logged .bars:after {
+  background: #000; // for admin
+}
+
+
+
+.top-nav .bars:before {
+  top: -6px;
+}
+.top-nav .bars:after {
+  bottom: -6px;
+}
+.top-nav.acty .bars {
+  background-color: transparent;
+}
+.top-nav.acty .bars:before, .top-nav.acty .bars:after {
+  top: 0;
+}
+.top-nav.acty .bars:before {
+  transform: rotate(45deg);
+}
+.top-nav.acty .bars:after {
+  transform: rotate(-45deg);
+}
 
 .sidenav {
 	display: flex;
@@ -232,7 +285,7 @@
 @media screen and (max-width: 600px) {
 	#navigation {
 		width: 90%;
-		span.top-nav {
+		.top-nav {
 			padding: 0.55em 1.25em;
 		}
 	}
