--- a/components/sass/_user-management.scss
+++ b/components/sass/_user-management.scss
@@ -91,8 +91,15 @@
 	margin-top: 0;
 	cursor: default;
 }
-#user-list {
-	.mng-usr {
+.user-box #transfer-form-top {
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 1em;
+}
+#transfer-form-top {
+	.mng-usr,
+	.transfer-usr
+	 {
 		font-size: 1em;
 		padding: 0.5em;
 		outline: none;
@@ -108,7 +115,8 @@
 			}
 		}
 	}
-	#usr-role-go {
+	#usr-role-go,
+	#transfer-this-top {
 		cursor: pointer;
 		padding: 0.5em 1em;
 		margin-left: 1em;
